feat: добавляет адаптивность

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -6,3 +6,12 @@ $orange: #fe5f1e;
 $container-width: 90%;
 
 $duration: 0.15s;
+
+// Viewports
+// ---------------------------------
+
+$vp-320:                            320px;
+$vp-375:                            375px;
+$vp-768:                            768px;
+$vp-1024:                           1024px;
+$vp-1440:                           1440px;
