--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,6 +1,7 @@
 @import './variables';
 @import './libs/normalize';
 @import './components/all';
+@import './mixins';
 
 body {
   background-color: $background;
@@ -23,15 +24,34 @@ body {
   }
 
   &__items {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      grid-column-gap: 10px;
+      grid-row-gap: 20px;
+      justify-items: center; 
+
+    @include vp-1439 {
+      grid-template-columns: repeat(3, 1fr);
+    }
+    @include vp-1023 {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @include vp-767 {
+      grid-template-columns: repeat(1, 1fr);
+    }
   }
 
   &__top {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     justify-content: space-between;
+    gap: 20px;
+
+    @include vp-1439 {
+      justify-content: center;
+    }
   }
 }
 
