--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,5 +1,5 @@
 @import '../variables';
-
+@import '../mixins';
 .header {
   border-bottom: 1px solid $gray-line;
   padding: 40px 0;
@@ -8,6 +8,11 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @include vp-767 {
+      flex-direction: column;
+      gap: 20px;
+    }
   }
 
   &__logo {
