--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -40,6 +40,7 @@ body {
     @include vp-767 {
       grid-template-columns: repeat(1, 1fr);
     }
+
   }
 
   &__top {
@@ -91,6 +92,11 @@ body {
         stroke-width: 1.9;
       }
     }
+  }
+
+  &__items {
+    display: flex;
+    flex-direction: column;
   }
 
   &__clear {
