refactor: подключает контекст

--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -24,5 +24,14 @@
         pointer-events: none;
         opacity: 0.1;
     }
+
+    .active {
+        a {        background-color: $orange;
+            color: $gray-line;
+        }
+    }
+
+
+
 }
 }
