--- a/src/components/Pagination/Pagination.module.scss
+++ b/src/components/Pagination/Pagination.module.scss
@@ -1,37 +1,37 @@
-@import '../../scss/variables';
-@import '../../scss/mixins';
+@import "../../scss/variables";
+@import "../../scss/mixins";
 
 .root {
-    display: flex;
-    gap: 5px;
+    li {
+        display: inline-block;
 
-    .link,
-    .next,
-    .previous {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 30px;
-    height: 30px;
-    border: 1px solid $orange;
-    border-radius: 50%;
-    @include hover-focus {
-        cursor: pointer;
-        background-color: $orange;
-        color: $gray-line;
-    }
-    .disabled {
-        pointer-events: none;
-        opacity: 0.1;
-    }
+        a {
+            display: inline-flex;
+            justify-content: center;
+            align-content: center;
+            text-align: center;
+            width: 45px;
+            line-height: 42px;
+            height: 45px;
+            border: 1px solid $color-orange;
+            border-radius: 30px;
+            margin-right: 10px;
+            color: $color-orange;
+            cursor: pointer;
 
-    .active {
-        a {        background-color: $orange;
-            color: $gray-line;
+            &:hover {
+                background-color: $color-orange;
+                color: $color-gray-line;
+            }
         }
     }
 
-
-
-}
+    :global {
+        .selected {
+            a {
+                background-color: $color-orange;
+                color: $color-gray-line;
+            }
+        }
+    }
 }
