--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -16,7 +16,7 @@
 
 .input {
     width: 100%;
-    border:  1px solid $black;
+    border:  1px solid $color-black;
     padding:  12px 20px;
     border-radius: 10px;
     font-size: 16px;
