--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,7 @@
-$black: #232323;
-$background: #ffdf8c;
-$gray-line: #f6f6f6;
-$orange: #fe5f1e;
+$color-black: #232323;
+$color-background: #ffdf8c;
+$color-gray-line: #f6f6f6;
+$color-orange: #fe5f1e;
 
 $container-width: 90%;
 
