--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -4,7 +4,7 @@
 @import './mixins';
 
 body {
-  background-color: $background;
+  background-color: $color-background;
 }
 
 .wrapper {
@@ -88,7 +88,7 @@ body {
       height: 30px;
       margin-right: 10px;
       path {
-        stroke: $black;
+        stroke: $color-black;
         stroke-width: 1.9;
       }
     }
@@ -133,7 +133,7 @@ body {
   &__item {
     display: flex;
     width: 100%;
-    border-top: 1px solid $gray-line;
+    border-top: 1px solid $color-gray-line;
     padding-top: 30px;
     margin-top: 30px;
 
@@ -207,14 +207,14 @@ body {
       width: 4%;
 
       .button {
-        border-color: darken($color: $gray-line, $amount: 10);
+        border-color: darken($color: $color-gray-line, $amount: 10);
       }
 
       svg {
         transform: rotate(45deg);
 
         path {
-          fill: darken($color: $gray-line, $amount: 15);
+          fill: darken($color: $color-gray-line, $amount: 15);
         }
       }
 
@@ -226,8 +226,8 @@ body {
         }
         &:hover,
         &:active {
-          border-color: darken($color: $gray-line, $amount: 80);
-          background-color: darken($color: $gray-line, $amount: 80);
+          border-color: darken($color: $color-gray-line, $amount: 80);
+          background-color: darken($color: $color-gray-line, $amount: 80);
         }
       }
     }
@@ -245,7 +245,7 @@ body {
 
         &:last-of-type {
           b {
-            color: $orange;
+            color: $color-orange;
           }
         }
       }
@@ -262,20 +262,20 @@ body {
         justify-content: center;
         width: 210px;
 
-        border-color: darken($color: $gray-line, $amount: 10);
+        border-color: darken($color: $color-gray-line, $amount: 10);
 
         span {
-          color: darken($color: $gray-line, $amount: 20);
+          color: darken($color: $color-gray-line, $amount: 20);
           font-weight: 500;
           font-weight: 600;
         }
 
         &:hover {
-          background-color: darken($color: $gray-line, $amount: 90);
-          border-color: darken($color: $gray-line, $amount: 90);
+          background-color: darken($color: $color-gray-line, $amount: 90);
+          border-color: darken($color: $color-gray-line, $amount: 90);
 
           span {
-            color: $gray-line;
+            color: $color-gray-line;
           }
         }
 
