--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -2,7 +2,7 @@
 
 .button {
   display: inline-block;
-  background-color: $orange;
+  background-color: $color-orange;
   border-radius: 30px;
   padding: 10px 20px;
   min-width: 100px;
@@ -25,11 +25,11 @@
   }
 
   &:hover {
-    background-color: darken($orange, 8%);
+    background-color: darken($color-orange, 8%);
   }
 
   &:active {
-    background-color: darken($orange, 12%);
+    background-color: darken($color-orange, 12%);
     transform: translateY(1px);
   }
 
@@ -45,30 +45,30 @@
   }
 
   &--black {
-    background-color: $black;
+    background-color: $color-black;
 
     &:hover,
     &:active {
-      background-color: lighten($color: $black, $amount: 10);
+      background-color: lighten($color: $color-black, $amount: 10);
     }
   }
 
   &--outline {
     background-color: #fff;
-    border-color: $orange;
+    border-color: $color-orange;
     &,
     span {
-      color: $orange;
+      color: $color-orange;
     }
 
     svg {
       path {
-        fill: $orange;
+        fill: $color-orange;
       }
     }
 
     &:hover {
-      background-color: $orange;
+      background-color: $color-orange;
 
       &,
       span {
@@ -83,7 +83,7 @@
     }
 
     &:active {
-      background-color: darken($orange, 8%);
+      background-color: darken($color-orange, 8%);
     }
   }
 
@@ -108,14 +108,14 @@
     &:hover {
       i {
         background-color: #fff;
-        color: $orange;
+        color: $color-orange;
       }
     }
 
     i {
       display: inline-block;
       border-radius: 30px;
-      background-color: $orange;
+      background-color: $color-orange;
       color: #fff;
       font-weight: 600;
       width: 22px;
