--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,7 +1,7 @@
 @import '../variables';
 @import '../mixins';
 .header {
-  border-bottom: 1px solid $gray-line;
+  border-bottom: 1px solid $color-gray-line;
   padding: 40px 0;
 
   .container {
