--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -357,7 +357,7 @@ body {
       margin: 45px auto 60px;
     }
 
-    .button--black {
+    .button--orange {
       padding: 12px 0 14px;
       width: 230px;
       margin: 0 auto;
